<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_song"
            android:icon="@drawable/ic_music"
            android:title="@string/mnu_music" />
        <item
            android:id="@+id/nav_album"
            android:icon="@drawable/ic_album"
            android:title="@string/mnu_album" />
        <item
            android:id="@+id/nav_artist"
            android:icon="@drawable/ic_artist"
            android:title="@string/mnu_artist" />
    </group>
    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_mini_game"
                android:icon="@drawable/ic_games"
                android:title="@string/mini_game" />
        </menu>
    </item>
</menu>